packages/stark-ui/assets/themes/_button-theme.scss
@mixin stark-button-color($color, $contrast) {
  &.mat-button,
  &.mat-icon-button,
  &.mat-stroked-button {
    color: $color;
    .mat-button-focus-overlay {
      background-color: rgba($color: $color, $alpha: 0.12);
    }
    .mat-ripple-element {
      background-color: rgba($color: $color, $alpha: 0.1);
    }
  }
  &.mat-flat-button,
  &.mat-raised-button,
  &.mat-fab,
  &.mat-mini-fab {
    color: $contrast;
    background-color: $color;
    .mat-ripple-element {
      background-color: rgba($color: $contrast, $alpha: 0.1);
    }
  }
  .mat-icon-button {
    .mat-ripple-element {
      background-color: rgba($color: $color, $alpha: 0.2);
    }
  }
}

@if variable-exists(stark-button-theme) {
  $button-theme: map-merge($button-theme, $stark-button-theme);
}

.mat-success {
  @include stark-button-color(map-get(map-get($button-theme, success), color), map-get(map-get($button-theme, success), contrast));
}

.mat-alert {
  @include stark-button-color(map-get(map-get($button-theme, alert), color), map-get(map-get($button-theme, alert), contrast));
}

.mat-alt {
  @include stark-button-color(map-get(map-get($button-theme, alt), color), map-get(map-get($button-theme, alt), contrast));
}

.mat-neutral {
  @include stark-button-color(map-get(map-get($button-theme, neutral), color), map-get(map-get($button-theme, neutral), contrast));
}

.mat-white {
  @include stark-button-color(#fff, $dark-primary-text);
}

.mat-icon.stark-small-icon {
  line-height: 18px;
  height: 18px;
  width: 18px;
  svg {
    height: 18px;
    width: 18px;
  }
}

.mat-button,
.mat-icon-button,
.mat-stroked-button,
.mat-flat-button,
.mat-raised-button,
.mat-fab,
.mat-mini-fab {
  text-transform: uppercase;
}

